openshift/coms-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "coms-app-master"
spec:
  ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: "coms-master"
    deploymentconfig: "coms-app-master"
    role: app
  sessionAffinity: None
