openshift/postgres-network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-crunchy-ha
  labels:
    postgres-operator.crunchydata.com/cluster: crunchy
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: hippo-ha
  ingress:
    - from:
        - podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: crunchy
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8008
        - protocol: TCP
          port: 2022
